--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,11 @@
     <meta name="theme-color" content="{{ site.theme_color | default: '#27ae60' }}">
     <meta name="msapplication-TileColor" content="{{ site.theme_color | default: '#27ae60' }}">
     
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <!-- CSS -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     
