Site title changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
                 <div class="nav-brand">
                     <a href="{{ '/' | relative_url }}" class="brand-link">
                         <img src="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}" alt="{{ site.title }}" class="brand-logo">
-                        <span class="brand-text">{{ site.title }}</span>
+                        <span class="brand-text">
+                            <span class="brand-word-1">wild</span><span class="brand-dot">.</span><span class="brand-word-2">imagination</span><span class="brand-dot">.</span><span class="brand-word-3">press</span>
+                        </span>
                     </a>
                 </div>
                 
