--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -10,8 +10,8 @@ layout: default
           <img src="{{ page.cover_image | relative_url }}" alt="{{ page.title }}" class="book-cover-img">
         {% else %}
           <div class="book-placeholder-large">
-            <h4>{{ page.title }}</h4>
-            <p>Cover Coming Soon</p>
+            <h4 class="book-title-large">{{ page.title }}</h4>
+            <p class="cover-coming-soon-large">Cover Coming Soon</p>
           </div>
         {% endif %}
       </div>
@@ -93,7 +93,8 @@ layout: default
               <img src="{{ book.cover_image | relative_url }}" alt="{{ book.title }}" loading="lazy">
             {% else %}
               <div class="book-placeholder-small">
-                <span>{{ book.title }}</span>
+                <span class="book-title-small">{{ book.title }}</span>
+                <span class="cover-coming-soon-small">Cover Coming Soon</span>
               </div>
             {% endif %}
           </div>
