--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
                     <img src="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}" alt="{{ site.title }}" class="footer-logo">
                     <div class="footer-text">
                         <p>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
-                        <p>Growing stories, nurturing dreams 🌳📚</p>
+                        <p>Growing stories, nurturing dreams</p>
                     </div>
                 </div>
             </div>
