--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,10 @@
     <!-- SEO -->
     {% seo %}
     
+    <!-- Google reCAPTCHA v3 -->
+    <!-- Replace YOUR_SITE_KEY with your actual reCAPTCHA site key -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LePxsIrAAAAAL5KZMaM9Gy-gnj62mMul9UnhBjv"></script>
+    
     <!-- Google Analytics -->
     {% if site.google_analytics %}
     <meta name="ga-id" content="{{ site.google_analytics }}">
